small formatting fixes

--- a/template/script.sh.erb
+++ b/template/script.sh.erb
@@ -5,7 +5,7 @@
 <%- num_workers = context.num_workers.to_i -%>
 
 #
-# Start Jupyter Notebook Server + Spark cluster
+# Start Jupyter Notebook server + Spark cluster
 #
 
 # Purge the module environment to avoid conflicts
