open doc links in new tabs
Fixes #2

--- a/view.html.erb
+++ b/view.html.erb
@@ -1,7 +1,8 @@
 Some helpful resources on using Apache Spark in a Jupyter notebook:
 
-- [Apache Spark Examples](https://spark.apache.org/examples.html)
-- [RDD Basics](https://github.com/jadianes/spark-py-notebooks/blob/master/nb2-rdd-basics/nb2-rdd-basics.ipynb)
+- <a href="https://spark.apache.org/examples.html" target="_blank">Apache Spark Examples</a>
+  (some work is required to translate the Python 2 examples here to Python 3)
+- <a href="https://github.com/jadianes/spark-py-notebooks/blob/master/nb2-rdd-basics/nb2-rdd-basics.ipynb" target="_blank">RDD Basics</a>
 
 <form action="/node/<%= host %>/<%= port %>/login" method="post" target="_blank">
   <input type="hidden" name="password" value="<%= password %>">
