--- a/template/script.sh.erb
+++ b/template/script.sh.erb
@@ -27,6 +27,9 @@
 setup_env () {
   module purge
   module load python/3.5 spark/2.1.0
+
+  # Disable randomized hash for string in Python 3.3+
+  export PYTHONHASHSEED=0
 }
 setup_env
 
