--- a/template/script.sh.erb
+++ b/template/script.sh.erb
@@ -1,4 +1,4 @@
-#!/bin/bash -l
+#!/usr/bin/env bash
 
 <%- avail_cores = context.node_type.include?("hugemem") ? 48   : 28  -%>
 <%- avail_mem   = context.node_type.include?("hugemem") ? 1528 : 120 -%>
@@ -26,12 +26,17 @@
 # Load the required environment
 setup_env () {
   module purge
+}
+setup_env
+
+# Load the runtime environment
+runtime_env() {
+  module purge
   module load python/3.5 spark/2.1.0
 
   # Disable randomized hash for string in Python 3.3+
   export PYTHONHASHSEED=0
 }
-setup_env
 
 #
 # Launch Spark cluster in standalone mode
@@ -45,7 +50,6 @@ mkdir "${LOG_ROOT}"
 export SPARK_MASTER_HOST=${host}
 export SPARK_MASTER_PORT=$(find_port ${SPARK_MASTER_HOST})
 export SPARK_MASTER_WEBUI_PORT=$(find_port ${SPARK_MASTER_HOST})
-export MASTER_LOG_FILE="${LOG_ROOT}/spark-master-${SPARK_MASTER_HOST}.out"
 
 # Generate Spark secret
 SPARK_SECRET="$(create_passwd)"
@@ -61,74 +65,141 @@ cat > "${SPARK_CONFIG_FILE}" << EOL
 EOL
 )
 
+# Launch Spark master process
+(
+# Load the required environment
+runtime_env
+
+# Set master information
+export MASTER_LOG_FILE="${LOG_ROOT}/spark-master-${SPARK_MASTER_HOST}.out"
+
 # Launch master
 echo "Launching master on ${SPARK_MASTER_HOST}:${SPARK_MASTER_PORT}..."
 set -x
 "${SPARK_HOME}/bin"/spark-class "org.apache.spark.deploy.master.Master" \
     --properties-file "${SPARK_CONFIG_FILE}" \
   &> "${MASTER_LOG_FILE}" &
-{ set +x; } 2>/dev/null
+)
 
 # Wait for the master server to fully start
 echo "Waiting for master server to open port ${SPARK_MASTER_PORT}..."
-if wait_until_port_used "${SPARK_MASTER_HOST}:${SPARK_MASTER_PORT}"; then
+if wait_until_port_used "${SPARK_MASTER_HOST}:${SPARK_MASTER_PORT}" 60; then
   echo "Discovered master listening on port ${SPARK_MASTER_PORT}!"
 else
-  echo "Timed out waiting for master to open port ${SPARK_MASTER_PORT}!" ; exit 1
+  echo "Timed out waiting for master to open port ${SPARK_MASTER_PORT}!"
+  clean_up 1
 fi
 sleep 2
+
+# Create Spark worker launcher script
+export SPARK_WORKER_SCRIPT="${PWD}/spark-worker.sh"
+(
+umask 077
+sed 's/^ \{2\}//' > "${SPARK_WORKER_SCRIPT}" << EOL
+  #!/usr/bin/bash -l
+
+  <%- if context.only_driver_on_root == "1" -%>
+  [[ \${PBS_NODENUM} == "0" ]] && exit 0
+  <%- end -%>
+
+  # Load helper methods
+  $(declare -f source_helpers)
+  source_helpers
+
+  # Load the required environment
+  $(declare -f runtime_env)
+  runtime_env
+
+  # Set worker connection information
+  export SPARK_WORKER_HOST=\${HOSTNAME}
+  export SPARK_WORKER_PORT=\$(find_port \${SPARK_WORKER_HOST})
+  export SPARK_WORKER_WEBUI_PORT=\$(find_port \${SPARK_WORKER_HOST})
+  export SPARK_WORKER_DIR="${PWD}/work"
+  export SPARK_WORKER_CORES=<%= avail_cores / num_workers %>
+  export WORKER_LOG_FILE="${LOG_ROOT}/spark-worker-\${SPARK_WORKER_HOST}-\${1}.out"
+
+  # Launch worker
+  echo "Launching worker #\${1} on \${SPARK_WORKER_HOST}:\${SPARK_WORKER_PORT}..."
+  set -x
+  "\${SPARK_HOME}/bin"/spark-class "org.apache.spark.deploy.worker.Worker" \\
+      --properties-file "${SPARK_CONFIG_FILE}" \\
+      spark://${SPARK_MASTER_HOST}:${SPARK_MASTER_PORT} \\
+    &> "\${WORKER_LOG_FILE}"
+EOL
+)
+chmod 700 "${SPARK_WORKER_SCRIPT}"
 
 # Launch workers
 echo "Launching workers..."
 for ((i=0; i<<%= num_workers %>; i++)); do
-  pbsdsh -u bash -l -c "
-    <%- if context.only_driver_on_root == "1" -%>
-    [[ \${PBS_NODENUM} == "0" ]] && exit 0
-    <%- end -%>
-    $(declare -f source_helpers)
-    source_helpers
-
-    # Load the required environment
-    $(declare -f setup_env)
-    setup_env
-
-    # Set worker connection information
-    export SPARK_WORKER_HOST=\${HOSTNAME}
-    export SPARK_WORKER_PORT=\$(find_port \${SPARK_WORKER_HOST})
-    export SPARK_WORKER_WEBUI_PORT=\$(find_port \${SPARK_WORKER_HOST})
-    export SPARK_WORKER_DIR=\"${PWD}/work\"
-    export SPARK_WORKER_CORES=<%= avail_cores / num_workers %>
-    export WORKER_LOG_FILE=\"${LOG_ROOT}/spark-worker-\${SPARK_WORKER_HOST}-${i}.out\"
-
-    # Launch worker
-    echo \"Launching worker #${i} on \${SPARK_WORKER_HOST}:\${SPARK_WORKER_PORT}...\"
-    set -x
-    \"${SPARK_HOME}/bin\"/spark-class \"org.apache.spark.deploy.worker.Worker\" \
-        --properties-file \"${SPARK_CONFIG_FILE}\" \
-        spark://${SPARK_MASTER_HOST}:${SPARK_MASTER_PORT} \
-      &> \"\${WORKER_LOG_FILE}\"
-  " &
+  pbsdsh -u -- "${SPARK_WORKER_SCRIPT}" ${i} &
 done
 
 #
 # Launch Jupyter with PySpark
 #
 
-# Use Jupyter instead of iPython
-export PYSPARK_DRIVER_PYTHON="jupyter"
+# Create a `python` wrapper script
+export PYTHON_WRAPPER_FILE="${PWD}/python.sh"
+(
+umask 077
+sed 's/^ \{2\}//' > "${PYTHON_WRAPPER_FILE}" << EOL
+  #!/usr/bin/env bash
 
-# Command line arguments for Jupyter
-export PYSPARK_DRIVER_PYTHON_OPTS="notebook --config='${CONFIG_FILE}'"
+  # Log all output from this script
+  export PYTHON_LOG_FILE="${PWD}/python.log"
+  exec &>>"\${PYTHON_LOG_FILE}"
 
-# Set working directory to home directory
-cd "${HOME}"
+  # Load the required environment
+  $(declare -f runtime_env)
+  runtime_env
+
+  # Setup PySpark
+  export PYTHONPATH="\${SPARK_HOME}/python/:\$PYTHONPATH"
+  export PYTHONPATH="\${SPARK_HOME}/python/lib/py4j-0.10.4-src.zip:\$PYTHONPATH"
+  export PYTHONSTARTUP="\${SPARK_HOME}/python/pyspark/shell.py"
+  export PYSPARK_SUBMIT_ARGS=" \\
+    --master spark://${SPARK_MASTER_HOST}:${SPARK_MASTER_PORT} \\
+    --driver-memory <%= context.only_driver_on_root == "1" ? avail_mem : 2 %>G \\
+    --executor-memory <%= avail_mem / num_workers %>G \\
+    --conf spark.driver.maxResultSize=0 \\
+    --properties-file \"${SPARK_CONFIG_FILE}\" \\
+    pyspark-shell \\
+  "
+
+  # Launch the original command
+  set -x
+  exec python "\${@}"
+EOL
+)
+chmod 700 "${PYTHON_WRAPPER_FILE}"
+
+# Create Jupyter kernels
+export JUPYTER_PATH="${PWD}/jupyter"
+export KERNEL_PATH="${JUPYTER_PATH}/kernels/pyspark"
+mkdir -p "${KERNEL_PATH}"
+(
+umask 077
+sed 's/^ \{2\}//' > "${KERNEL_PATH}/kernel.json" << EOL
+  {
+    "display_name": "PySpark",
+    "language": "python",
+    "argv": [
+      "${PYTHON_WRAPPER_FILE}",
+      "-m",
+      "ipykernel",
+      "-f",
+      "{connection_file}"
+    ]
+  }
+EOL
+)
+
+# Set working directory to notebook root directory
+cd "${NOTEBOOK_ROOT}"
+cd /
 
 # Launch Jupyter Notebook interface to Spark
 echo "Launching Jupyter..."
 set -x
-pyspark \
-  --master spark://${SPARK_MASTER_HOST}:${SPARK_MASTER_PORT} \
-  --driver-memory <%= context.only_driver_on_root == "1" ? avail_mem : 2 %>G \
-  --executor-memory <%= avail_mem / num_workers %>G \
-  --conf spark.driver.maxResultSize=0 \
-  --properties-file "${SPARK_CONFIG_FILE}"
+/usr/local/anaconda-notebook/bin/jupyter notebook --config="${CONFIG_FILE}"
