--- a/view.html.erb
+++ b/view.html.erb
@@ -1,12 +1,27 @@
+<%- extend ERB::Util -%>
 Some helpful resources on using Apache Spark in a Jupyter notebook:
 
 - <a href="https://spark.apache.org/examples.html" target="_blank">Apache Spark Examples</a>
   (some work is required to translate the Python 2 examples here to Python 3)
 - <a href="https://github.com/jadianes/spark-py-notebooks/blob/master/nb2-rdd-basics/nb2-rdd-basics.ipynb" target="_blank">RDD Basics</a>
 
-<form action="/node/<%= host %>/<%= port %>/login" method="post" target="_blank">
-  <input type="hidden" name="password" value="<%= password %>">
-  <button class="btn btn-primary" type="submit" style="margin-top: 6px;">
-    <i class="fa fa-eye"></i> Connect to Jupyter
-  </button>
-</form>
+<div class="row">
+  <div class="col-xs-<%= tutorials_root.blank? ? "12" : "6" %>">
+    <form action="/node/<%= host %>/<%= port %>/login" method="post" target="_blank">
+      <input type="hidden" name="password" value="<%= password %>">
+      <button class="btn btn-primary" type="submit" style="margin-top: 6px;">
+        <i class="fa fa-cogs"></i> Connect to Jupyter
+      </button>
+    </form>
+  </div>
+  <%- unless tutorials_root.blank? -%>
+  <div class="col-xs-6">
+    <form action="/node/<%= host %>/<%= port %>/login?next=<%= url_encode "/node/#{host}/#{port}/tree#{tutorials_root}" %>" method="post" target="_blank" class="pull-right">
+      <input type="hidden" name="password" value="<%= password %>">
+      <button class="btn btn-primary" type="submit" style="margin-top: 6px;">
+        <i class="fa fa-folder"></i> Open Tutorials Folder
+      </button>
+    </form>
+  </div>
+  <%- end -%>
+</div>
