--- a/template/script.sh.erb
+++ b/template/script.sh.erb
@@ -23,11 +23,8 @@
 # Start Jupyter Notebook server + Spark cluster
 #
 
-# Load the required environment
-setup_env () {
-  module purge
-}
-setup_env
+# Clean the environment
+module purge
 
 # Load the runtime environment
 runtime_env() {
@@ -196,16 +193,13 @@ sed 's/^ \{2\}//' > "${KERNEL_PATH}/kernel.json" << EOL
 EOL
 )
 
-# Output debug information
-set -x
-module list
-{ set +x; } 2>/dev/null
-
 # Set working directory to notebook root directory
 cd "${NOTEBOOK_ROOT}"
 
 # Setup Jupyter Notebook environment
-export PATH="/usr/local/anaconda-notebook/bin:${PATH}"
+module use $MODULEPATH_ROOT/project/ondemand
+module load jupyter/python3.5
+module list
 
 # List available kernels for debugging purposes
 set -x
