--- a/template/script.sh.erb
+++ b/template/script.sh.erb
@@ -23,6 +23,9 @@
 # Start Jupyter Notebook server + Spark cluster
 #
 
+echo "Starting main script..."
+echo "TTT - $(date)"
+
 # Clean the environment
 module purge
 
@@ -87,6 +90,8 @@ else
   clean_up 1
 fi
 sleep 2
+
+echo "TTT - $(date)"
 
 # Create Spark worker launcher script
 export SPARK_WORKER_SCRIPT="${PWD}/spark-worker.sh"
@@ -196,15 +201,21 @@ EOL
 # Set working directory to notebook root directory
 cd "${NOTEBOOK_ROOT}"
 
+echo "TTT - $(date)"
+
 # Setup Jupyter Notebook environment
 module use $MODULEPATH_ROOT/project/ondemand
 module load jupyter/python3.5
 module list
 
+echo "TTT - $(date)"
+
 # List available kernels for debugging purposes
 set -x
 jupyter kernelspec list
 { set +x; } 2>/dev/null
+
+echo "TTT - $(date)"
 
 # Launch Jupyter Notebook interface to Spark
 set -x
