--- a/template/script.sh.erb
+++ b/template/script.sh.erb
@@ -32,7 +32,7 @@ module purge
 # Load the runtime environment
 runtime_env() {
   module purge
-  module load python/3.6 spark/2.3.0
+  module load xalt/latest python/3.6 spark/2.3.0
 
   # Disable randomized hash for string in Python 3.3+
   export PYTHONHASHSEED=0
