Updated where xalt is loaded

--- a/template/script.sh.erb
+++ b/template/script.sh.erb
@@ -205,7 +205,7 @@ echo "TTT - $(date)"
 
 # Setup Jupyter Notebook environment
 module use $MODULEPATH_ROOT/project/ondemand
-module load jupyter/python3.5
+module load xalt/latest jupyter/python3.5
 module list
 
 echo "TTT - $(date)"
