migrate owens to slurm by adding owens-slurm cluster and toggling args based of the adapter

--- a/submit.yml.erb
+++ b/submit.yml.erb
@@ -1,8 +1,39 @@
+<%-
+  torque_cluster = OodAppkit.clusters[cluster].job_config[:adapter] == 'torque'
+
+  base_slurm_args = if bc_num_slots.blank?
+                      ["--nodes", "1", "--exclusive"]
+                    else
+                      ["--nodes", "#{bc_num_slots}", "--exclusive"]
+                    end
+
+  slurm_args =  case node_type
+                when "hugemem"
+                  partition = bc_num_slots.to_i > 1 ? "hugemem-parallel" : "hugemem"
+                  base_slurm_args + ["--partition", partition]
+                else
+                  base_slurm_args
+                end
+
+  torque_args =  case node_type
+                when "hugemem"
+                  ":ppn=48:hugemem"
+                else
+                  ":ppn=28"
+                end
+
+-%>
 ---
 batch_connect:
   template: "basic"
   conn_params: [ "tutorials_root" ]
 script:
   native:
+  <%- if torque_cluster %>
     resources:
-      nodes: "<%= bc_num_slots.blank? ? "1" : bc_num_slots.to_i %><%= node_type %>"
+      nodes: "<%= bc_num_slots.blank? ? "1" : bc_num_slots.to_i %><%= torque_args %>"
+  <% else %>
+  <%- slurm_args.each do |arg| %>
+    - "<%= arg %>"
+  <%- end %>
+  <%- end %>
