--- a/form.yml.erb
+++ b/form.yml.erb
@@ -8,6 +8,7 @@ cluster:
   - "owens"
 form:
   - account
+  - jupyterlab_switch
   - bc_num_hours
   - bc_num_slots
   - node_type
@@ -15,6 +16,7 @@ form:
   - only_driver_on_root
   - include_tutorials
   - bc_email_on_started
+  - version
 attributes:
   account:
     label: "Project"
@@ -55,3 +57,15 @@ attributes:
   include_tutorials:
     widget: "check_box"
     label: Include access to OSC tutorial/workshop notebooks.
+  jupyterlab_switch:
+    widget: "check_box"
+    label: "Use JupyterLab instead of Jupyter Notebook?"
+    help: |
+      JupyterLab is the next generation of Jupyter, and is completely compatible with existing Jupyter Notebooks.
+  version:
+    widget: "select"
+    label: "JupyterLab Version"
+    options:
+      - [ "2.1",  "app_jupyter/2.1.4" ]
+      - [ "1.2",  "app_jupyter/1.2.16" ]
+      - [ "0.35", "app_jupyter/0.35.6" ]
