--- a/template/script.sh.erb
+++ b/template/script.sh.erb
@@ -34,8 +34,7 @@ cd "${NOTEBOOK_ROOT}"
 echo "TTT - $(date)"
 
 # Setup Jupyter Notebook environment
-module use $MODULEPATH_ROOT/project/ondemand
-module load xalt/latest jupyter/python3.5
+module load ondemand/project xalt/latest <%= context.version %>
 module list
 
 echo "TTT - $(date)"
@@ -49,4 +48,4 @@ echo "TTT - $(date)"
 
 # Launch Jupyter Notebook interface to Spark
 set -x
-jupyter notebook --config="${CONFIG_FILE}"
+jupyter <%= context.jupyterlab_switch == "1" ? "lab" : "notebook" %> --config="${CONFIG_FILE}"
