--- a/form.yml.erb
+++ b/form.yml.erb
@@ -31,7 +31,7 @@ attributes:
     widget: "number_field"
     value: "1"
     min: "1"
-    max: "48"
+    max: "28"
     label: "Number of workers per node"
     help: |
       This describes how the cores and memory are divvied up on the node
@@ -48,8 +48,16 @@ attributes:
         available RAM as well as 48 cores, or a Pitzer node that has 3TB of available RAM as well as 80 cores. 
         There are 16 of these nodes on Owens and 4 on Pitzer.
     options:
-      - "any"
-      - "hugemem"
+      - [ 
+          "any", "any",
+          data-max-num-workers-for-cluster-owens: 28,
+          data-max-num-workers-for-cluster-pitzer: 48,
+        ]
+      - [ 
+          "hugemem", "hugemem", 
+          data-max-num-workers-for-cluster-owens: 48,
+          data-max-num-workers-for-cluster-pitzer: 80,
+        ]
   only_driver_on_root:
     widget: "check_box"
     label: Only launch the driver on the master node.
@@ -69,15 +77,15 @@ attributes:
     options:
       - [
         "2.3.0", "2.3.0",
-        data-option-for-pitzer: false
+        data-option-for-cluster-pitzer: false
         ]
       - [
         "2.4.5", "2.4.5",
-        data-option-for-owens: false,
+        data-option-for-cluster-owens: false,
         ]
       - [
         "3.0.1", "3.0.1",
-        data-option-for-pitzer: false
+        data-option-for-cluster-pitzer: false
         ]
   version:
     widget: "select"
@@ -85,7 +93,7 @@ attributes:
     options:
       - [
         "3.0", "app_jupyter/3.0.7",
-        data-option-for-pitzer: false
+        data-option-for-cluster-pitzer: false
         ]
       - [
         "2.2", "app_jupyter/2.2.10",
