--- a/template/before.sh.erb
+++ b/template/before.sh.erb
@@ -1,5 +1,4 @@
 <%-
-  avail_cores = context.node_type.include?("hugemem") ? 48   : 28
   avail_mem   = context.node_type.include?("hugemem") ? 1528 : 120
   num_workers = context.num_workers.to_i
   torque_cluster = OodAppkit.clusters[context.cluster].job_config[:adapter] == 'torque'
@@ -183,7 +182,8 @@ sed 's/^ \{2\}//' > "${SPARK_WORKER_SCRIPT}" << EOL
   export SPARK_WORKER_PORT=\$(find_port \${SPARK_WORKER_HOST})
   export SPARK_WORKER_WEBUI_PORT=\$(find_port \${SPARK_WORKER_HOST})
   export SPARK_WORKER_DIR="${PWD}/work"
-  export SPARK_WORKER_CORES=<%= avail_cores / num_workers %>
+  export SPARK_WORKER_CORES=$(($(nproc)/<%= num_workers %>))
+
   export WORKER_LOG_FILE="${LOG_ROOT}/spark-worker-\${SPARK_WORKER_HOST}-\${1}.out"
 
   # Launch worker
