--- a/template/before.sh.erb
+++ b/template/before.sh.erb
@@ -21,7 +21,7 @@
       {}
     else
       {}.tap do |extra|
-        File.readlines(context.spark_configuration_file).each do |line|
+        File.readlines(context.spark_configuration_file.strip).each do |line|
           key, value = line.split(' ')
           extra[key] = value
         end
