--- a/view.html.erb
+++ b/view.html.erb
@@ -15,7 +15,7 @@ Some helpful resources on using Apache Spark in a Jupyter notebook:
     </form>
   </div>
   <%- unless tutorials_root.blank? -%>
-  <div class="col-xs-6">
+  <div class="ml-3 col-xs-6">
     <form action="/node/<%= host %>/<%= port %>/login?next=<%= url_encode "/node/#{host}/#{port}/tree#{tutorials_root}" %>" method="post" target="_blank" class="pull-right">
       <input type="hidden" name="password" value="<%= password %>">
       <button class="btn btn-primary" type="submit" style="margin-top: 6px;">
