add a cookie for client to authenticate

--- a/submit.yml.erb
+++ b/submit.yml.erb
@@ -25,6 +25,8 @@ batch_connect:
     - "tutorials_root"
     - "spark_master_webui_port"
     - "spark_master_host"
+    - "spark_ui_auth_token"
+    - "spark_version"
 script:
   accounting_id: "<%= account %>"
   native:
