fix broken app links by appending a / to the url

--- a/view.html.erb
+++ b/view.html.erb
@@ -28,7 +28,7 @@ Some helpful resources on using Apache Spark in a Jupyter notebook:
 
   <%- if spark_version.to_s >= '3.4.1' -%>
   <div class="col-md-<%= tutorials_root.blank? ? "6" : "4" %>">
-    <a class="btn btn-primary" target="_blank" href="/rnode/<%= spark_master_host %>/<%= spark_master_webui_port %>">
+    <a class="btn btn-primary" target="_blank" href="/rnode/<%= spark_master_host %>/<%= spark_master_webui_port %>/">
       <i class="fa fa-star"></i> Connect to Spark WebUI
     </a>
   </div>
